# Projects-Answers

./: .gitignore  README.md  index.html
Classes/shape_area_and_perimeter/: shapes.go  shapes.hs  shapes.py  shapes.rs
Classic_Algorithms/: collatz_conjecture.kt  sieve_of_eratosthenes.kt
Classic_Algorithms/collatz_conjecture/: collatz_conjecture.go  collatz_conjecture.hs  collatz_conjecture.js  collatz_conjecture.py  collatz_conjecture.rs
Classic_Algorithms/sieve_of_eratosthenese/: sieve_of_erastosthenes2.py  sieve_of_eratosthenese.go  sieve_of_eratosthenese.py  sieve_of_eratosthenese.rs
Classic_Algorithms/sort/: merge_bubble.py
Classic_Algorithms/sorting/: merge_bubble.py  merge_sort.kt  sort.kt
Networking/country_ip_lookup/: ip_lookup.go  ip_lookup.kt  ip_lookup.py
Networking/site_checker/: site_checker.cs
Networking/site_checker/site_checker_rust/: Cargo.toml
Networking/site_checker/site_checker_rust/src/: main.rs
Networking/whois_search_tool/: whois_search_tool.go  whois_search_tool.rs
Numbers/: Fibonacci.java  coinflip.cpp  coinflip.py  fibonacci_sequence.cs  prime_factorization.py
Numbers/alarm_clock/: alarm_clock.go  alarm_clock.py
Numbers/binary-to-decimal/: binary_to_decimal.cs  binary_to_decimal.js  binary_to_decimal.py
Numbers/binary_to_decimal/: Binary.java  binary_to_decimal.go  binary_to_decimal.java  binary_to_decimal.kt  binary_to_decimal.py  binary_to_decimal.rs  bintodec.go  main.py
Numbers/calculator/: calculator.cpp  calculator.go  calculator.js  main.cpp  (+7 more)
Text/: fizz_buzz.py  fizz_buzz.rs
networking/: site_checker.js
(+148 files in other folders)
